--- a/comic.html
+++ b/comic.html
@@ -15,7 +15,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
   body { 
-      font: 400 30px 'Pacifico', cursive;
+      font: 30px 'Pacifico', cursive;
       line-height: 2;
       color: green;
       background: url("https://www.iau.org/static/archives/images/screen/potw1624a.jpg");
